* Change ordering of page titles to view real content on browser tabs
* Add CocoaPods info to XCode projects - fixes issue:44
* Add a permission denied page rather than always rendering a login screen
* Hide projects in the menu and project list screen that the user does not have permission to view
* Add a configuration for the frequency of changeset loading

* Fix issue:64 where progressing an issue can appear to alter the time remaining incorrectly
* Fix issue:62 - don't reset the platform in an xcode project unless the info file is being parsed
* Fix issue:agile-app-issues:1 autocomplete issue titles when creating relationships
* Fix some velocity calculations
* Fix issue where restricted users could not edit their own details
* Fix issue:65 Build change list showing complete history when revision before is recent
* Fix an issue that would cause builds started through the interface to delay in starting
* Fix an issue where searches with a duplicate term could fail to render

2.0-rc1

* Group "other" user dashboard issues by project
* Added issues, milestones and userdashboard endpoints to the available APIs
* Add Gradle project support
* Add QR codes for easier access to app install links
* issue:agile-app-builds:1 Build projects once their import is complete

* Fix issue where time logged when resolving an issue was not being saved
* Fix issue where eclipse android projects could not reference local libraries
* Issue:57 Random ordering of durationworkeds if times match
* Various DB optimisations
* Issue:55 Include build config name in artefact upload events and build events
* Correct encoding of JSON API (to UTF-8)
* Correct rendering of file sizes to IEC standards
* Fix an issue with the file "updates" page hanging
* Fix a problem where projects would simetimes build more than once for a single changeset
* Issue:60 Upgrade progress bar not updating


2.0-beta4

* Add a grouped history page for better visibility of which apps are active